# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Id: $

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  It helps if I put things in the correct order so they'll actually execute,
  rather than getting a nice error from emerge.

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Change upgrade to update.

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Add back in the package.provided code that *should* skip the kernel sources
  merge for call back and subsequent runs.

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  We don't really need to use binary packages for the kernel sources, since it
  doesn't gain us anything. Also, we need to delete the /usr/src/linux symlink
  when we're not using kerncache.

  13 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
  targets/support/kmerge.sh:
  Remove 'symlink' from USE, since it's not needed and screws up kerncache

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage2/livecd-stage2-controller.sh:
  OK, we run our find outside the chroot, so we don't want to use absolute
  paths unless we want to wipe out *.a *.la *.pyc and *.pyo from our host
  system. Oops. Due to this bug, I'm making this 2.0.6_pre15 for testing
  immediately.

  13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage2/livecd-stage2-controller.sh,
  targets/stage1/stage1-controller.sh:
  Cleanup the clean section for stage1 and add an updated clean section for
  livecd-stage2 when we're a minimal, universal, or game CD. This is
  2.0.6_pre14 for testing.

  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  We should be using --newuse when merging our packages in callback.

  11 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/grp/grp-chroot.sh: