@@ -1,6 +1,10 @@
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Id: $
 
+  14 Mar 2008; Andrew Gaffney <agaffney@gentoo.org>
+  targets/support/kmerge.sh:
+  Clean up package.provided after the kernel build
+
   13 Mar 2008; Chris Gianelloni <wolf31o2@gentoo.org>
   targets/support/kmerge.sh:
   It helps if I put things in the correct order so they'll actually execute,
